--- a/Lulu's Eatery/style.css
+++ b/Lulu's Eatery/style.css
@@ -46,11 +46,11 @@ aside h3 { border-bottom: 1px solid #000000;
 	grid-area: navArea;
 	background-color: black;
 	text-align: center;
-	
  }
 
 nav li {
     display: inline-block;
+	padding-right: 20px;
 }
 
 nav a {	text-decoration:none;
@@ -72,7 +72,7 @@ nav { letter-spacing: 0.1em;
 	background-color: black;
     display:grid;
 	color: #ffffff;
-	padding: 10px 10px 10px 10px;
+	padding: 50px 10px 10px 10px;
     grid-template-rows: 1fr 1fr .5fr;
 	grid-template-columns: 1fr 1fr;
 	grid-template-areas:
