--- a/contact.css
+++ b/contact.css
@@ -57,7 +57,8 @@ nav a:visited { color: #c4dbad; }
 
 nav { letter-spacing: 0.1em;
      text-decoration:none;
-     //color:white;
+     border-top: 6px solid #c4dbad;
+	 border-bottom: 6px solid #c4dbad;
 }
  
  nav ul { list-style-type: none; }
@@ -108,7 +109,16 @@ nav { letter-spacing: 0.1em;
 	 grid-area: details;
 	 text-align: center;
  }
- 
+  #logo { position: relative;
+		 -webkit-animation-name: fade;
+		 -webkit-animation-duration: 4s;
+		 animation-name: fade;
+		 animation-duration: 4s;
+ }
+ @-webkit-keyframes fade {
+	from {opacity: .1}
+	to {opacity: 1}
+ }
    @media only screen and (max-width: 2000px) {
 
  
