--- a/location.css
+++ b/location.css
@@ -60,7 +60,8 @@ nav a:visited { color: #c4dbad; }
 
 nav { letter-spacing: 0.1em;
      text-decoration:none;
-     //color:white;
+     border-top: 6px solid #c4dbad;
+	 border-bottom: 6px solid #c4dbad;
 }
  
  nav ul { list-style-type: none; }
@@ -112,7 +113,16 @@ nav { letter-spacing: 0.1em;
 	 margin-right: 400px;
  }
  .floatr { float: right; }
- 
+  #logo { position: relative;
+		 -webkit-animation-name: fade;
+		 -webkit-animation-duration: 4s;
+		 animation-name: fade;
+		 animation-duration: 4s;
+ }
+ @-webkit-keyframes fade {
+	from {opacity: .1}
+	to {opacity: 1}
+ }
    @media only screen and (max-width: 2000px) {
 	 .details {
 	 grid-area: details;
