--- a/style.css
+++ b/style.css
@@ -62,7 +62,8 @@ nav a:visited { color: #c4dbad; }
 
 nav { letter-spacing: 0.1em;
      text-decoration:none;
-     //color:white;
+	 border-top: 6px solid #c4dbad;
+	 border-bottom: 6px solid #c4dbad;
 }
  
  nav ul { list-style-type: none; }
@@ -73,6 +74,8 @@ nav { letter-spacing: 0.1em;
     display:grid;
 	color: #ffffff;
 	padding: 50px 10px 10px 10px;
+	border-top: 6px solid #c4dbad;
+	border-bottom: 6px solid #c4dbad;
     grid-template-rows: 1fr 1fr .5fr;
 	grid-template-columns: 1fr 1fr;
 	grid-template-areas:
@@ -136,3 +139,13 @@ input, textarea { margin-top: 10px;
 				  } 
 #mySubmit { margin-left: 160px; }
  
+ #logo { position: relative;
+		 -webkit-animation-name: fade;
+		 -webkit-animation-duration: 4s;
+		 animation-name: fade;
+		 animation-duration: 4s;
+ }
+ @-webkit-keyframes fade {
+	from {opacity: .1}
+	to {opacity: 1}
+ }
