--- a/sustain.css
+++ b/sustain.css
@@ -56,7 +56,8 @@ nav a:visited { color: #c4dbad; }
 
 nav { letter-spacing: 0.1em;
      text-decoration:none;
-     //color:white;
+     border-top: 6px solid #c4dbad;
+	 border-bottom: 6px solid #c4dbad;
 }
  
  nav ul { list-style-type: none; }
@@ -66,6 +67,8 @@ nav { letter-spacing: 0.1em;
 	background-color: black;
     display:grid;
 	color: #ffffff;
+	border-top: 6px solid #c4dbad;
+	border-bottom: 6px solid #c4dbad;
     grid-template-rows: 1fr;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-template-areas:
@@ -113,3 +116,23 @@ li {
 p::first-letter {
     font-size:200%;
 }
+ #logo { position: relative;
+		 -webkit-animation-name: fade;
+		 -webkit-animation-duration: 4s;
+		 animation-name: fade;
+		 animation-duration: 4s;
+ }
+ @-webkit-keyframes fade {
+	from {opacity: .1}
+	to {opacity: 1}
+ }
+  .imgs { position: relative;
+		 -webkit-animation-name: fade2;
+		 -webkit-animation-duration: 4s;
+		 animation-name: fade2;
+		 animation-duration: 4s;
+ }
+ @-webkit-keyframes fade2 {
+	from {opacity: .1}
+	to {opacity: 1}
+ }
