--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ aside h3 { border-bottom: 1px solid #000000;
 			  float: right; }
  .bannerArea {
 	grid-area:bannerArea;
-	background-image: url(assets/lulus.jpg);
+	background-image: url(assets/lulusnew.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	
