--- a/location.css
+++ b/location.css
@@ -35,7 +35,7 @@ body {	margin:0; }
 
  .bannerArea {
 	grid-area:bannerArea;
-	background-image: url(assets/lulus.jpg);
+	background-image: url(assets/lulusnew.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	
