--- a/styles/food.css
+++ b/styles/food.css
@@ -13,7 +13,7 @@
 }
 .bannerArea {
 	grid-area:bannerArea;
-	background-image: url(assets/lulusnew.jpg);
+	background-image: url(../lulusnew.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	
