--- a/styles/location.css
+++ b/styles/location.css
@@ -1,30 +1,50 @@
-.bodyGrid {
-   grid-area:bodyArea;
-   margin:auto;
-   width:90%;
+/*Written by Jasmine, edited by Nathan*/
+#root {
+   height:100vh;
+   width:100vw;
    display:grid;
-   padding: 20px;
-   grid-template-rows:1fr 1fr;
-   grid-template-columns:1fr;
+   grid-template-rows:3fr 1fr 5fr 5fr;
+   grid-template-columns:1fr 1fr 1fr;
    grid-template-areas:
-   'maincontent'
-   'details'
+   'bannerArea bannerArea bannerArea'
+   'navArea navArea navArea'
+   'bodyArea bodyArea bodyArea'
+   'footerArea footerArea footerArea';
  }
- .attr { font-weight: bold;
-		color: #083b66;
-		padding-right: 100px;
-}
- #localimg { width: 1000px;
-			height: 600px;
- }
+body {	margin:0; }
 
  .bannerArea {
 	grid-area:bannerArea;
-	background-image: url(../lulusnew.jpg);
+	background-image: url('../assets/lulusnew.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 	
  }
+ #navArea { 
+	grid-area: navArea;
+	background-color: black;
+	text-align: center;
+ }
+
+nav li {
+    display: inline-block;
+	padding-right: 20px;
+}
+
+nav a {	text-decoration:none;
+		color:white;
+}
+
+nav li:hover{ background-color: grey; }
+nav a:visited { color: #c4dbad; }
+
+nav { letter-spacing: 0.1em;
+     text-decoration:none;
+     border-top: 6px solid #c4dbad;
+	 border-bottom: 6px solid #c4dbad;
+}
+ 
+ nav ul { list-style-type: none; }
  
 .footerArea {
 	grid-area:footerArea;
@@ -32,12 +52,13 @@
     display:grid;
 	color: #ffffff;
 	padding: 50px 10px 10px 10px;
-    grid-template-rows: 1fr 1fr .5fr;
-	grid-template-columns: 1fr 1fr;
+	border-top: 6px solid #c4dbad;
+	border-bottom: 6px solid #c4dbad;
+    grid-template-rows: 3fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr;
 	grid-template-areas:
-	'info location'
-	'social social'
-	'totop totop';	
+	'info social location'
+	'totop totop totop';	
 	
 }	
 .footerArea a:visited { color: #c4dbad; }
@@ -63,16 +84,33 @@
  #totop { grid-area: totop;
  margin: auto;
  }
+.bodyGrid {
+   grid-area:bodyArea;
+   margin:auto;
+   width:90%;
+   display:grid;
+   padding: 20px;
+   grid-template-rows:1fr;
+   grid-template-columns:2fr 1fr;
+   grid-template-areas:
+   'maincontent details'
+ }
+ .attr { font-weight: bold;
+		color: #083b66;
+		padding-right: 100px;
+}
+ #localimg { width: 1000px;
+			height: 600px;
+ }
+
  .maincontent{
    grid-area:maincontent;
-   text-align: center;
  }
  .details {
 	 grid-area: details;
-	 margin-left: 400px;
-	 margin-right: 400px;
  }
- .floatr { float: right; }
+ .floatr { float: right; 
+margin-top:0;}
   #logo { position: relative;
 		 -webkit-animation-name: fade;
 		 -webkit-animation-duration: 4s;
