--- a/styles/sustain.css
+++ b/styles/sustain.css
@@ -1,4 +1,5 @@
-  .grid {
+/*Written by Nathan*/
+.grid {
    grid-area:bodyArea;
    justify-items:center;
    background-color: #c4dbad;
@@ -12,53 +13,6 @@
    'item2 item1 item3'
    'item5 item1 item4'
    'item5 item1 item4'    
- }
- .bannerArea {
-	grid-area:bannerArea;
-	background-image: url(../lulusnew.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	
- }
- 
-.footerArea {
-	grid-area:footerArea;
-	background-color: black;
-    display:grid;
-	color: #ffffff;
-	padding: 50px 10px 10px 10px;
-	border-top: 6px solid #c4dbad;
-	border-bottom: 6px solid #c4dbad;
-    grid-template-rows: 1fr 1fr .5fr;
-	grid-template-columns: 1fr 1fr;
-	grid-template-areas:
-	'info location'
-	'social social'
-	'totop totop';	
-	
-}	
-.footerArea a:visited { color: #c4dbad; }
- #totop { grid-area: totop;
- margin: auto;
- }
-#info { grid-area: info;
-		text-align: center;
-    	font-style: italic;
-        margin:auto;
-}
-#social {
-    margin:auto;
-    grid-area: social;
-	padding: 10px 10px 10px 10px;
-	text-align: center;
-	
-}
-#social img { margin-top: 50px;
-			  padding-right: 30px;
- }
- #location { 
-     grid-area: location;
-     margin:auto;
  }
  .item1{
    grid-area:item1;
