Changes to Order Page and Contact
Made changes to the order page, now has working pop-ups and menu items. Contact page isn't correct still, but did a little changing to help fix the issue.

--- a/styles/style.css
+++ b/styles/style.css
@@ -195,7 +195,7 @@ label { float: left;
 	    padding-right: 10px;
 	    margin-top: 10px;
 		}
-input, textarea { margin-top: 10px; 
+.indexinput, #textarea { margin-top: 10px; 
                   display: block;
 				  } 
 #mySubmit { margin-left: 160px; }
