--- a/styles/contact.css
+++ b/styles/contact.css
@@ -8,13 +8,12 @@
    grid-template-rows:1fr;
    grid-template-columns:1fr;
    grid-template-areas:
-   'maincontent'
+   'contactcontent'
    'details'
  }
- #required { color: red; }
- form { background-color: #c4dbad; }
- iframe { padding: 10px 10px 10px 10px; }
-h2, p { text-align: center; }
+ .contactcontent{
+	grid-area:maincontent;
+ }
  .bannerArea {
 	grid-area:bannerArea;
 	background-image: url('../assets/lulusnew.jpg');
@@ -22,37 +21,40 @@ h2, p { text-align: center; }
 	background-repeat: no-repeat;
 	
  }
- .details a { padding-right: 80px; }	
- 
-
- .maincontent{
-   grid-area:maincontent;
-   margin-left: 300px;
-   margin-right: 300px;
- }
- .details {
+  .details {
 	 grid-area: details;
 	 text-align: center;
  }
+ 
+  #required { color: red; }
+  
+ #contactform { background-color: #c4dbad; }
+ 
+ #contactform label { float: left; }
+ 
+ iframe { padding: 10px 10px 10px 10px; }
+ 
+h2, p { text-align: center; }
+
+ .details a { padding-right: 80px; }	
+ 
   #logo { position: relative;
 		 -webkit-animation-name: fade;
 		 -webkit-animation-duration: 4s;
 		 animation-name: fade;
 		 animation-duration: 4s;
  }
+ 
  @-webkit-keyframes fade {
 	from {opacity: .1}
 	to {opacity: 1}
  }
    @media only screen and (max-width: 2000px) {
-
+	   
+	   
+   }
  
 	@media only screen and (max-width: 950px) {
 
-	 .maincontent{
-	grid-area:maincontent;
-	margin-left: 100px;
-	margin-right: 100px;
- }
-}
+	 
 }
