--- a/styles/order.css
+++ b/styles/order.css
@@ -30,7 +30,7 @@
 .tab {
   overflow: hidden;
   border: 1px solid #ccc;
-  //background-color: #f1f1f1;
+  background-color: #f1f1f1;
   background: #134e5e; /* fallback for old browsers */
   background: -webkit-linear-gradient(to top, #134e5e, #71b280); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to top, #134e5e, #71b280); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
