--- a/styles/order.css
+++ b/styles/order.css
@@ -53,6 +53,7 @@
   background-color: #ddd;
   color: black
 }
+.icons { padding-right: 8px; }
 table#group { border: 3px solid #134e5e;		
 		 background: #ffffff;
 		 padding: 10px;
