--- a/lulu's/public/luluslocaleatery/styles/style.css
+++ b/lulu's/public/luluslocaleatery/styles/style.css
@@ -125,7 +125,11 @@ nav { letter-spacing: 0.1em;
 			background-image: url('../assets/food.png');
             color:white;
  }
- #menu #specials #discounts p { font-size: 25px; } 
+ .p { 
+	font-size: 20px; 
+	padding-left: 30px;
+	padding-right: 30px;
+ } 
  
   #specials { grid-area: menu;
 			border: 1px solid #000000;
